[package]
name = "asnr-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asnr-traits = { path = "../asnr-traits" }
asnr-grammar-derive = { path = "../asnr-grammar-derive" }

[dependencies.num]
version = "0.4"
default-features = false
