[package]
name = "asnr-tests"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
asnr-compiler = { path = "../asnr-compiler" }
asnr-compiler-derive = { path = "../asnr-compiler-derive" }
asnr-grammar = { path = "../asnr-grammar" }
asnr-transcoder = { path = "../asnr-transcoder" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bitvec = { version = "1" }
bitvec-nom = { version = "0.2" }
rasn = "0.9.5"
rasn-kerberos = "0.9.5"
bytes = "1.4.0"
num-bigint = "0.4.4"

[[bench]]
name = "uper_bench"
harness = false
