[package]
name = "asnr-transcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
uper = []

[dependencies]
asnr-grammar = { path = "../asnr-grammar" }
nom = "7.1.3"

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.bitvec]
version = "1"
default-features = false