[package]
name = "asnr-transcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uper"]
uper = ["dep:bitvec-nom", "dep:bitvec"]

[dependencies]
asnr-grammar = { path = "../asnr-grammar" }
nom = "7"
bitvec = { version = "1", optional = true }
bitvec-nom = { version = "0.2", optional = true }

[dependencies.num]
version = "0.4"
default-features = false

[dev-dependencies]
asnr-compiler-derive = { path = "../asnr-compiler-derive" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "uper_bench"
harness = false